feat(inventory): Add create inventory of user
