# src/swagger.json
@@ -63,7 +63,7 @@
                 }
               }
             },
-            "description": "new user name",
+            "description": "new user name and uid",
             "required": true
           }
         ],
@@ -72,7 +72,7 @@
             "description": "User created"
           },
           "400": {
-            "description": "no user name found"
+            "description": "no user found"
           },
           "500": {
             "description": "Server encountered an internal error"
@@ -488,6 +488,77 @@
         }
       }
     },
+    "/user/{userId}/inventory/equipement": {
+      "post": {
+        "tags": [
+          "User"
+        ],
+        "summary": "Give an equipement to an user",
+        "description": "",
+        "parameters": [
+          {
+            "name": "userId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "equipementBaseId": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/user/{userId}/inventory/item": {
+      "post": {
+        "tags": [
+          "User"
+        ],
+        "summary": "Give items to an user",
+        "description": "",
+        "parameters": [
+          {
+            "name": "userId",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "itemId": {
+                  "example": "any"
+                },
+                "stackSize": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
     "/inventory/{id}": {
       "get": {
         "tags": [
@@ -522,34 +593,6 @@
             "in": "path",
             "required": true,
             "type": "string"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      }
-    },
-    "/inventory/": {
-      "post": {
-        "tags": [
-          "Inventory"
-        ],
-        "summary": "Update an inventory",
-        "description": "",
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "userId": {
-                  "example": "any"
-                }
-              }
-            }
           }
         ],
         "responses": {
